--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "cjs",
     "module": "esnext",
     "target": "esnext",
-    "lib": ["es2017", "es7", "es6", "es5", "es2015", "dom"],
+    "lib": ["es2017", "es7", "es6", "es5", "es2015", "dom", "esnext"],
     "esModuleInterop": true,
     "allowJs": true,
     "baseUrl": ".",
