--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,23 +4,23 @@
   // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    {
-      "name": "Launch Program js",
-      "program": "${workspaceFolder}/promise.js",
-      "request": "launch",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "type": "node"
-    },
     // {
-    //   "type": "node",
-    //   "request": "launch",
-    //   "name": "Launch Program",
-    //   "skipFiles": ["<node_internals>/**"],
+    //   "name": "Launch Program js",
     //   "program": "${workspaceFolder}/index.ts",
-    //   "outFiles": ["${workspaceFolder}/**/*.js"],
-    //   "runtimeArgs": ["-r", "ts-node/register"]
-    // }
+    //   "request": "launch",
+    //   "skipFiles": [
+    //     "<node_internals>/**"
+    //   ],
+    //   "type": "node"
+    // },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Program",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/index.ts",
+      "outFiles": ["${workspaceFolder}/**/*.js"],
+      "runtimeArgs": ["-r", "ts-node/register"]
+    }
   ]
 }
